# knowhere-python-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  python-sdk-plan.md  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
docs/: usage.md
examples/: async_usage.py  error_handling.py  parse_file.py  parse_url.py  step_by_step.py
src/knowhere/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  _logging.py  _response.py  _types.py
src/knowhere/lib/: __init__.py  polling.py  result_parser.py  upload.py
src/knowhere/resources/: __init__.py  _base.py  documents.py  jobs.py  retrieval.py
src/knowhere/types/: __init__.py  document.py  job.py  params.py  result.py  retrieval.py  shared.py
tests/: conftest.py  test_client.py  test_documents.py  test_exceptions.py  test_jobs.py  test_logging.py  test_models.py  test_parse.py  test_polling.py  test_result_parser.py  test_retrieval.py  test_retry.py  test_upload.py
