[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowhere-python-sdk"
version = "0.1.0"
description = "Official Python SDK for the Knowhere document parsing API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Knowhere Team", email = "team@knowhereto.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://knowhereto.ai"
Documentation = "https://docs.knowhereto.ai"
Repository = "https://github.com/Ontos-AI/knowhere-python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/knowhere"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
python_version = "3.9"
strict = true
